docs/examples/cert-manager/azure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-deploy-k8s-azure-dns
  namespace: default
  annotations:
    kubernetes.io/ingress.class: voyager
    certmanager.k8s.io/issuer: "letsencrypt-staging-dns"
    certmanager.k8s.io/acme-challenge-type: dns01
spec:
  tls:
    - hosts:
        - kiteci-azure-dns.appscode.info
      secretName: kiteci-azure-dns-tls
  rules:
    - host: kiteci-azure-dns.appscode.info
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
            path: /
